--- a/assets/css/block/faq.css
+++ b/assets/css/block/faq.css
@@ -10,6 +10,7 @@
   align-items: center;
   border-bottom: 0.0625rem solid rgba(0, 0, 0, 0.1);
   color: #075074;
+  cursor: pointer;
   display: flex;
   font-weight: 700;
   justify-content: space-between;
@@ -104,5 +105,11 @@
 @media (min-width: 992px) {
   .faq ul li .faq-title {
     font-size: 1.25rem;
+  }
+}
+
+@media (min-width: 992px) and (min-height: 576px) {
+  .faq ul li.active .faq-content {
+    max-height: 100vh;
   }
 }
