--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -76,9 +76,8 @@ picture {
   width: 2rem;
 }
 
-.call {
-  background-color: #ebf0f8;
-  padding: 3.5rem 0px;
+.font-weight-medium {
+  font-weight: 500;
 }
 
 @media (min-width: 768px) {
@@ -98,11 +97,5 @@ picture {
 
   #topbar img {
     width: 4.75rem;
-  }
-}
-
-@media (min-width: 992px) {
-  .title::after {
-    width: 8.125rem;
   }
 }
